# ctx

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  IMPROVEMENTS.md  README.md  deny.toml
.ctx/: rules.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: render-ctx-pr-comment.cjs  render-ctx-pr-comment.test.cjs
.github/workflows/: ci.yml  ctx-pr-analysis.yml  ctx-pr-comment.yml  docs.yml  policy.yml  release.yml  snapshot.yml
docs/: README.md  architecture.md  code-intelligence.md  configuration.md  context-generation.md  getting-started.md  json-output.md  language-support.md  lsp-languages.md  messaging.md  packaging.md  privacy.md
docs/agents/: ctx.md
docs/benchmark/: run-record.md  run-record.schema.json
docs/commands/: audit.md  check.md  diff.md  duplicates.md  harness.md  hotspots.md  lsp.md  map.md  score.md  self-update.md  serve.md  shell.md  similar.md  smart.md
docs/integrations/: ci-cd.md  claude.md  codex.md  quality-gates.md  vscode.md
docs/latex/: main.aux  main.out  main.tex
docs/website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
governance/: agent-workflow.md  cookbook-authoring.md  current-state.md  guardrails.md  releasing.md  versioning.md
governance/contracts/: cli.json
packaging/: SHA256SUMS.v0.3.3
packaging/aur/: .SRCINFO  PKGBUILD
packaging/deb/: control.template
packaging/homebrew/: ctx.rb
packaging/rpm/: ctx.spec
packaging/scoop/: ctx.json
perf/: Cargo.toml
scripts/: check-agent-docs.sh  check-contracts.py  check-governance.py  ci.sh  package-linux.sh  package-release.py  release-check.sh  release-plugin-check.sh  revert-rate.sh  rework-rate.sh  update-aur-package.sh  update-homebrew-formula.sh  update-package-metadata.py  update-scoop-manifest.ps1  validate-release-assets.py  version.py
skills/ctx/: SKILL.md
snapshots/sha=0794eb1f0147051399c9bba43e044f8a30c16327/: dup_pairs.parquet  files.parquet  meta.parquet  symbols.parquet
snapshots/sha=10bd1db55abf8b8085fec8eb9c20cd7bd6e0d242/: dup_pairs.parquet  files.parquet  meta.parquet  symbols.parquet
snapshots/sha=20fcd3237098df0e0fb0e89bae846b96a87546eb/: dup_pairs.parquet  files.parquet  meta.parquet  symbols.parquet
snapshots/sha=2eb404046afc0936a1b2c2f8d8137b55e359352b/: dup_pairs.parquet  files.parquet  meta.parquet  symbols.parquet
snapshots/sha=376a21d73a0dce18522b4799d2de99ee4123f3be/: dup_pairs.parquet  files.parquet  meta.parquet  symbols.parquet
snapshots/sha=3d4da5611e0f6abf494ca135f390ca482194d346/: dup_pairs.parquet  files.parquet  meta.parquet  symbols.parquet
snapshots/sha=4d2a812305fc78f6e07829a4e636cf3378a691d3/: dup_pairs.parquet  files.parquet  meta.parquet  symbols.parquet
snapshots/sha=4df3db167c35fd27b3af2552a0b9cbaa29654c76/: dup_pairs.parquet  files.parquet  meta.parquet  symbols.parquet
snapshots/sha=51805bd7098f42e36a0377b974218496eb0b63b8/: dup_pairs.parquet  files.parquet  meta.parquet  symbols.parquet
snapshots/sha=53d27f8a98e4586d63a013185ebe6abd2aaa49ab/: dup_pairs.parquet  files.parquet  meta.parquet  symbols.parquet
snapshots/sha=57cdd91a944a694b2390e45b47b989dd403b79d4/: dup_pairs.parquet  files.parquet  meta.parquet  symbols.parquet
snapshots/sha=5d89df791bfa9ca6c6a94c0dd17e0d864aca2046/: dup_pairs.parquet  files.parquet  meta.parquet  symbols.parquet
snapshots/sha=62ba248c85001f81a4302bd98beed707f2b0c108/: dup_pairs.parquet  files.parquet  meta.parquet  symbols.parquet
snapshots/sha=674d18b55e49d605290605c30753dddf2a792270/: dup_pairs.parquet  files.parquet  meta.parquet  symbols.parquet
snapshots/sha=86102716cc8c9f7a763b3ff74dca1589aadf016a/: dup_pairs.parquet  files.parquet  meta.parquet  symbols.parquet
snapshots/sha=877a6d2eb4d80f7884ba3c951f1b7198d0d93022/: dup_pairs.parquet  files.parquet  meta.parquet  symbols.parquet
snapshots/sha=93df2b698f72292b9d495fc6be0a4c5ee81b5294/: dup_pairs.parquet  files.parquet  meta.parquet  symbols.parquet
snapshots/sha=b18f661ea8198a60b012a311ff302e00f5793c4b/: dup_pairs.parquet  files.parquet  meta.parquet  symbols.parquet
snapshots/sha=c96072fbf07119619509ab5c2462d196ba436a70/: dup_pairs.parquet  files.parquet  meta.parquet  symbols.parquet
snapshots/sha=cc42139e3388e420d1c3c002355129ddf9b3031e/: dup_pairs.parquet  files.parquet  meta.parquet  symbols.parquet
snapshots/sha=d7d04edf3c52805bb334caca084c3066eb9c6b1b/: dup_pairs.parquet  files.parquet  meta.parquet  symbols.parquet
snapshots/sha=d9bcdceeca297be6ae723e549940e0673d63e8d5/: dup_pairs.parquet  files.parquet  meta.parquet  symbols.parquet
snapshots/sha=dacec310888d6b344ee1d6c88d3d69607e76fe89/: dup_pairs.parquet  files.parquet  meta.parquet  symbols.parquet
snapshots/sha=de09cf9799101c3a95492166b02bab5653ff74ae/: dup_pairs.parquet  files.parquet  meta.parquet  symbols.parquet
snapshots/sha=e8bdf33bdf450b406b569ad48591c05fdfd230f4/: dup_pairs.parquet  files.parquet  meta.parquet  symbols.parquet
snapshots/sha=ea6a0aad4a36bfb0174b1334b6f4cf475b494f3f/: dup_pairs.parquet  files.parquet  meta.parquet  symbols.parquet
snapshots/sha=f287b6c930f3756e2069d9fd76bff765efbfd07c/: dup_pairs.parquet  files.parquet  meta.parquet  symbols.parquet
src/: check.rs  cli.rs  config.rs  config_edit.rs  default_ignores.rs  diff.rs  error.rs  exit.rs  fingerprint.rs  fixture.rs  formatter.rs  gatelog.rs  gitutil.rs  json.rs  lib.rs  lsp_registry.rs  main.rs  output.rs  rank.rs  rules.rs  score.rs  shell.rs  smart.rs  snapshot.rs  testutil.rs  tokens.rs  tree.rs  update.rs  walker.rs
src/analytics/: duckdb_impl.rs  mod.rs  stub.rs
src/commands/: analysis.rs  lsp.rs  (+21 more)
tests/: count_only_cli.rs  duplicates_cli.rs  fixture_gen.rs  function_references_cli.rs  gate_log_cli.rs  harness_cli.rs  hotspots_cli.rs  index_cli.rs  lsp_cli.rs  lsp_registry.rs  lsp_registry_client.rs  ollama_smart_e2e.rs  pattern_scoping_cli.rs  query_callers_cli.rs  query_impact_cli.rs  self_update_cli.rs  smart_relevance.rs  snapshot_cli.rs  snapshot_stub.rs  sql.rs  study_scripts.rs
(+145 files in other folders)
