[package]
name = "ctx"
version = "0.2.0"
edition = "2021"
rust-version = "1.91"
description = "Fast CLI tool that generates AI-ready context from your codebase, with built-in code intelligence"
documentation = "https://docs.rs/ctx"
license = "MIT OR Apache-2.0"
repository = "https://github.com/saldestechnology/ctx"
homepage = "https://github.com/saldestechnology/ctx"
readme = "README.md"
keywords = ["cli", "llm", "ai", "context", "prompt"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Johan Öhman Saldes <johan@saldestechnology.com>"]

[[bin]]
name = "ctx"
path = "src/main.rs"

[lib]
name = "ctx"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
globset = "0.4"

# Code Intelligence (SQLite Foundation + sqlite-vec)
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1.6"
zerocopy = { version = "0.7", features = ["derive"] }
sha2 = "0.10"
flate2 = "1.0"                    # For source compression

# Tree-sitter for code parsing
# Pin to 0.20.10 to ensure all language grammars use the same version
tree-sitter = "~0.20.10"
tree-sitter-rust = "0.20.4"
tree-sitter-typescript = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-go = "0.20"
# Solidity parsing (using solang-parser instead of tree-sitter due to version conflicts)
solang-parser = "0.3.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# HTTP client with retry support (replaces hand-rolled native-tls)
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

# Token counting for LLM context management
tiktoken-rs = "0.9"

# Parallel processing
rayon = "1.10"

# MCP server support
rmcp = { version = "0.11.0", features = ["server", "transport-io"], optional = true }
schemars = { version = "1.0", optional = true }
async-trait = { version = "0.1", optional = true }

# Interactive shell
rustyline = { version = "17", features = ["with-file-history"] }

# Local embeddings (fastembed)
fastembed = "5.4"

# Phase 2: DuckDB for analytical queries (optional, not available on Windows)
duckdb = { version = "1.0", features = ["bundled"], optional = true }

# Phase 4: File watching for incremental updates
notify = "6.1"
notify-debouncer-mini = "0.4"
dirs = "6.0.0"

[features]
default = ["duckdb"]
duckdb = ["dep:duckdb"]
mcp = ["rmcp", "schemars", "async-trait"]

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[profile.release]
lto = true
strip = true
codegen-units = 1
