[package]
name = "agentis-ctx"
version = "0.3.5"
edition = "2021"
rust-version = "1.91"
description = "Fast CLI tool that generates AI-ready context from your codebase, with built-in code intelligence"
documentation = "https://docs.rs/agentis-ctx"
license = "MIT OR Apache-2.0"
repository = "https://github.com/agentis-tools/ctx"
homepage = "https://docs.agentis.tools"
readme = "README.md"
keywords = ["cli", "llm", "ai", "context", "prompt"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Johan Öhman Saldes <johan@saldestechnology.com>"]
include = [
    "/src/**",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
]

[[bin]]
name = "ctx"
path = "src/main.rs"

[lib]
name = "ctx"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
globset = "0.4"

# Code Intelligence (SQLite Foundation + sqlite-vec)
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1.6"
zerocopy = { version = "0.8", features = ["derive"] }
sha2 = "0.11"
flate2 = "1.0"                    # For source compression

# Tree-sitter for code parsing
# Pin to 0.20.10 to ensure all language grammars use the same version
tree-sitter = "0.26.11"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-go = "0.25.0"
# Solidity parsing (using solang-parser instead of tree-sitter due to version conflicts)
solang-parser = "0.3.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"

# RFC3339 timestamps for JSON output envelopes
time = { version = "0.3", features = ["formatting", "parsing"] }

# Error handling
thiserror = "2.0"

# Version comparison for `ctx harness compat`
semver = "1"

# HTTP client with retry support (replaces hand-rolled native-tls)
# `blocking` is used by `ctx self-update` and the passive update check
reqwest = { version = "0.13", features = ["json", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

# Release archive extraction for `ctx self-update` (already in the
# dependency graph transitively via hf-hub/libduckdb-sys)
tar = "0.4"

# Token counting for LLM context management
tiktoken-rs = "0.12"

# Parallel processing
rayon = "1.10"

# MCP server support
rmcp = { version = "2.2.0", features = ["server", "transport-io"], optional = true }
schemars = { version = "1.0", optional = true }
async-trait = { version = "0.1", optional = true }

# Interactive shell
rustyline = { version = "18", features = ["with-file-history"] }

# Local embeddings (fastembed)
# fastembed 5.17+ pulls an ort build that no longer ships Intel macOS binaries.
# Keep the release matrix compatible with the documented x86_64 macOS target.
fastembed = "=5.17.2"

# Phase 2: DuckDB for analytical queries (optional, not available on Windows)
duckdb = { version = "1.0", features = ["bundled", "parquet"], optional = true }

# Phase 4: File watching for incremental updates
notify = "8.2"
notify-debouncer-mini = "0.7"
dirs = "6.0.0"

# Windows release artifacts are .zip (see .github/workflows/release.yml);
# zip is already in the dependency graph transitively via libduckdb-sys
[target.'cfg(windows)'.dependencies]
zip = { version = "8", default-features = false, features = ["deflate"] }

[package.metadata.docs.rs]
all-features = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/ctx-v{ version }-{ target }{ archive-suffix }"
bin-dir = "ctx-v{ version }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[features]
default = ["duckdb"]
duckdb = ["dep:duckdb"]
mcp = ["rmcp", "schemars", "async-trait"]

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1

# Perf-harness build: near-release optimization without fat-LTO compile cost.
# Baselines in perf/baselines/ are recorded under this profile.
[profile.perf]
inherits = "release"
lto = "thin"
codegen-units = 16
strip = false
